--- a/public/style.css
+++ b/public/style.css
@@ -38,19 +38,6 @@ button {
 
 /* Aircraft arrow marker (Leaflet divIcon) */
 .aircraft-arrow-icon {
-}
-
-.aircraft-arrow {
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 16px solid red;
-  transform-origin: 50% 75%;
-}
-
-/* Aircraft arrow marker (Leaflet divIcon) */
-.aircraft-arrow-icon {
   text-align: center;
 }
 
@@ -64,7 +51,7 @@ button {
   margin: 0 auto;
 }
 
-/* Small speed/altitude label under the arrow */
+/* Small speed/FL + route label under the arrow */
 .aircraft-label {
   margin-top: 2px;
   padding: 1px 3px;
@@ -75,7 +62,6 @@ button {
   white-space: nowrap;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
-
 
 table {
   border-collapse: collapse;
