--- a/public/style.css
+++ b/public/style.css
@@ -137,3 +137,33 @@ th.sortable::after {
   font-size: 0.75em;
   margin-left: 0.25em;
 }
+
+
+/* History tab styles */
+.history-controls {
+  margin: 1em 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5em 1em;
+  align-items: center;
+}
+
+.history-controls label {
+  margin-right: 0.25em;
+}
+
+#historyStatus {
+  margin: 0.5em 0;
+  font-size: 0.9rem;
+  color: #444;
+}
+
+#historyTable {
+  margin-top: 0.5em;
+}
+
+.history-flight-meta,
+.history-meta {
+  font-size: 0.8rem;
+  color: #555;
+}
